--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
-    "@nomiclabs/hardhat-web3": "^2.0.0",
-    "hardhat": "^2.11.1",
-    "web3": "^1.8.0"
+    "@truffle/contract": "^4.6.31",
+    "hardhat": "^2.24.0",
+    "hardhat-deploy": "^1.0.2"
   },
   "dependencies": {
     "big-integer": "^1.6.51",
     "crypto-js": "^4.1.1",
-    "ethereumjs-util": "^7.1.5"
+    "ethereumjs-util": "^7.1.5",
+    "web3": "^1.10.0"
   }
 }
