Started the Implementation

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "big-integer": "^1.6.51",
     "crypto-js": "^4.1.1",
     "ethereumjs-util": "^7.1.5",
+    "reflect-metadata": "^0.2.2",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.23",
     "web3": "^1.10.0"
   }
 }
