--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "hardhat-deploy": "^1.0.2"
   },
   "dependencies": {
-    "big-integer": "^1.6.51",
+    "better-sqlite3": "^11.10.0",
+    "big-integer": "^1.6.52",
     "crypto-js": "^4.1.1",
     "ethereumjs-util": "^7.1.5",
+    "ethers": "^6.14.1",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.23",
-    "web3": "^1.10.0"
+    "web3": "^4.16.0"
   }
 }
